--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,18 @@
 *.iml
-.gradle
-/local.properties
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
-.DS_Store
+/.gradle
+/.idea
+/.DS_Store
 /build
-/captures
-.externalNativeBuild
-.cxx
-
 /gradle
-/build.gradle
+/captures
+/projectFilesBackup
+/local.properties
 /gradle.properties
 /gradlew
 /gradlew.bat
-/settings.gradle
 /app/build
-/app/libs/
-/app/build.gradle
-/app/src/androidTest
-/app/src/main/res
-/app/src/main/AndroidManifest.xml
+/app/libs
+/app/src/test/
+/app/src/androidTest/
+.externalNativeBuild
+.cxx
